themes/evolve/lessc/Andy.less
/* ... */
/* STANDARD RIGHT SIDEBAR */
#block-system-main .right-sidebar, .right-sidebar, .region-right-sidebar{
    position: relative;
    @media @larger-tablet-width-down{
        display: none;
    }
        .block{
            margin-bottom: 40px;
        }
      .underline-heading{
        position: relative;
        font-family: Cairo;
        font-size: 1.4em;
        text-transform: uppercase;
        &:after{
            content: '';
            position: absolute;
            width: 30px;
            height: 3px;
            background: @bright-blue;
            left: 0;
            bottom: -5px;
        }
      }
      .nav{
          margin-top: 30px;
          max-width: 230px;
          padding-left: 0;
          li{
              padding-left: 0;
              font-size: 1em;
              > a{
                padding: 10px 0;
                border-top: 1px solid rgba(0,0,0,0.1);
                color: #000;
                font-weight: 400;
                font-family: Roboto;
                transition: all .3s linear;
                text-decoration: none;
                &:hover{
                    color: @bright-blue;
                }
              }
              &:first-child{
                a{
                    border-top: 0px;
                }
            }
              &:last-child{
                  a{
                      border-bottom: 1px solid rgba(0,0,0,0.1);
                  }
              }
          }
      }

    @media all and (max-width: @tablet-width) {
        display: none;
    }
}

/* PARTNERS LOGO CAROUSEL MOBILE */
.bxslide{
    @media @larger-phone-width-down{
        margin: 0!important;
    }
}

/* STANDARD CLOSE BUTTON */
.close-btn {
	cursor: pointer;
    position: absolute;
    top: 36px;
    left: 30px;
    width: 25px;
    height: 25px;
    line-height: 0;
	margin: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-radius: 0;
    background: none;
    border: 1px solid #b5b5b5;
	transition: 0.2s linear;
	&:before{
		content: '';
		width: 20px;
		transform: rotate(45deg);
		height: 2px;
		position: absolute;
		background: #b5b5b5;
	}
	&:after{
		content: '';
		position: absolute;
		width: 20px;
		transform: rotate(135deg);
		height: 2px;
		background: #b5b5b5;
	}
	&:hover{
		background: rgba(0,0,0,0.3);
	}
}

/* BACK TO PREV NAV */
.bottom-nav{
    a{
        color: #333;
        transition: all .3s  linear;
        padding: 0;
        font-size: 1.2em;
        &:hover{
            color: @bright-blue;
            opacity: 1;
        }
    }
}

/* RESTYLE ACCORDION PANEL*/
#section-main-content #dexp-accordions-wrapper.panel-group{
    .panel-heading{
        a{
            color: #fff;
            &.collapsed{
                color: @bright-blue;
            }
        }
    }
}

/* HIDE/SHOW ON LOGIN STATE */
.user-logged-in{
    .user-logged-in-hide{
        display: none;
    }
}

.user-log-out{
    .user-log-out-hide{
        display: none;
    }
}

/* DEFAULT RIGHT SIDEBAR WITH DRUPAL BLOCKS */
.region-right-sidebar, .right-sidebar{
    h3.headline{
        position: relative;
        font-family: Cairo;
        font-size: 1.4em;
        text-transform: uppercase;
        letter-spacing: 0.5px;
    }
    .brd-headling{
        border-color: @bright-blue;
    }
    .underline-heading{
        position: relative;
        font-family: Cairo;
        font-size: 1.4em;
        text-transform: uppercase;
        &:after{
            content: '';
            position: absolute;
            width: 30px;
            height: 3px;
            background: @bright-blue;
            left: 0;
            bottom: -5px;
        }
      }
    ul{
        margin: 30px 0 0 0;
        li{
            border: 0;
            margin: 0;
            padding: 0;
            line-height: 1.2em;
            font-size: 1em;
            list-style: none;
            a{
                padding: 10px 0;
                border-top: 1px solid rgba(0,0,0,0.1);
                color: #000;
                font-weight: 400;
                font-family: Roboto;
                transition: all .3s linear;
                text-decoration: none;
                display: block;
                &:hover{
                    color: @bright-blue;
                }
            }
            &:first-child{
                a{
                    border-top: 0;
                }
            }
            &.active a{
                color: @bright-blue;
            }
        }
    }

    .nav{
        .views-field-title{
            border: 0;
            margin: 0;
            padding: 0;
            line-height: 1.2em;
            font-size: 1.2em;
            list-style: none;
            a{
                padding: 10px 0;
                border-top: 1px solid rgba(0,0,0,0.1);
                color: #000;
                font-weight: 400;
                font-family: Roboto;
                transition: all .3s linear;
                text-decoration: none;
                display: block;
                &:hover{
                    color: @bright-blue;
                }
                &.active{
                    color: @bright-blue;
                }
            }
            &:first-child{
                a{
                    border-top: 0;
                }
            }
        }
    }
}

.Pagination{
    display: none;
}
/* DEFAULT PAGINATION */
.pagination{
    display: none;
    &.pager{
        display: block;
        > li{
            padding: 0;
            float: left;
            margin: 0;
            border: 0;
            font-size: 1.1em;
            > a{
                padding: 5px 10px;
                border: 0;
                color: #333;
                transition: all .3s linear;
                &:hover{
                    color: @bright-blue;
                    background: none;
                }
            }
        }
    }
}
/* ... */

